Fix some broken styles

--- a/src/components/navbar/components/configure-kcapp-modal/configure-kcapp-modal.style.less
+++ b/src/components/navbar/components/configure-kcapp-modal/configure-kcapp-modal.style.less
@@ -36,7 +36,8 @@
     transform: translateX(26px);
 }
 
-.block-container-with-header {
+.block-container-with-header-flex {
+    .block-container-with-header;
     display: flex;
     align-items: center;
     margin-bottom: 0px;
